# quarto-gh-pages-builder

./: .gitignore  .nojekyll  Makefile  README.md  agents.md  api-reference.html  contributing.html  getting-started.html  grafts.yaml  index.html  operations.html  playbook.html  pyproject.toml  ruff.toml  search.json  setup-graft.html  setup-trunk.html  workflow.html
.github/workflows/: build_uv_python_wheel_pure.yml  publish_uv_pypi.yml
.history/docs/: index_20251206144231.qmd  index_20251206144414.qmd  index_20251206144435.qmd
_chapters/chapter1/: index.html  section1.html  section1_sub.html  section2.html  section2_sub.html  section3.html
_chapters/chapter15/: index.html  section1.html  section1_sub.html  section2.html  section2_sub.html  section3.html
_chapters/chapter5/: index.html  section1.html  section1_sub.html  section2.html  section2_sub.html  section3.html
appendix/: glossary.html
chapters__/chapter1/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html  section3.html
chapters__/chapter11/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
chapters__/chapter13/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
chapters__/chapter20/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
docs/: _quarto.yaml  api-reference.qmd  contributing.qmd  index.qmd  marimo_app.qmd  playbook.qmd  sample.py  setup-graft.qmd  setup-trunk.qmd
docs/appendix/: glossary.qmd
grafts__/chapter1/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
grafts__/chapter11/: data.html  (+5 more)
intro/: readme.html
src/quarto_graft/trunk-templates/default/: .gitignore  Makefile  _quarto.yaml  pyproject.toml
tests/: __init__.py  test_archive.py  test_branches.py  test_build.py  test_cache.py  test_cli.py  test_file_utils.py  test_git_utils.py  test_quarto_config.py  test_release.py  test_template_sources.py
(+50 files in other folders)
