[project]
name = "marimo-demo"
version = "0.1.0"
description = "marimo-demo graft starter"
readme = "README.md"
authors = [{ name = "quarto-graft" }]
requires-python = ">=3.11"
dependencies = [
    "quarto-cli>=1.8.26",
    "marimo>=0.18.4",
    "quarto>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
