[project]
name = "quarto-graft"
version = "0.1.16"
description = "Quarto GitHub Pages branch graft tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1",
  "pygit2>=1.19.0",
  "questionary>=2.1.1",
  "ruamel-yaml>=0.18.16",
  "typer>=0.20.1",
  "quarto-cli",
  "ghapi>=1.0.6",
]

[dependency-groups]
dev = [
    "packaging>=25.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "mypy>=1.15",
]

[project.scripts]
quarto-graft = "quarto_graft.cli:main"

[tool.coverage.run]
source = ["quarto_graft"]
branch = true
omit = [
    "*/graft-templates/*",
    "*/trunk-templates/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
exclude = [
    "src/quarto_graft/graft-templates/",
    "src/quarto_graft/trunk-templates/",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
quarto-cli = { git = "https://github.com/quarto-dev/quarto-cli", rev = "v1.9.31" }
